# VisIVOServer-PointDistribute-miniapp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  INSTALL.md  Makefile  README.md
API/: Makefile  Makefile.txt  Makefile_OLD
API_LIGHT/: config.sh  visivosetLight.cpp
Utils/: CMakeLists.txt  VisIVOImporterConfigure.h
VisIVOFilters/Filters/: Makefile_u1  vspointpropertyop.cpp  vsvollimit.cpp
VisIVOImporter/Importers/: Makefile  Makefile_u1  VisIVOFilter  hdf5source.cpp  vosourcenew.h
VisIVOUtils/: Makefile_u1  VisIVOUtil
VisIVOViewer/Viewer/: Makefile
VisIVOViewer/pipe/: slicerpipe.cpp
src/: CMakeLists.txt  Makefile  mainFilter.cpp  visivoset.cpp
src/API/: Makefile (original)  Makefile.txt  config.sh  visivofil.cpp  visivoimp.cpp  visivoset.cpp  visivoview.cpp
src/API_LIGHT/: CMakeLists.txt  Makefile_API  Makefile_API_FUNZIONA  visivo.h  visivofil.cpp  visivoimp.cpp  visivosetLight.cpp
src/Utils/: commandline.cpp  commandline.h  extendedglyph3d.h  historyXmlWriter.cc  optionssetter.cpp  parameterparser.cpp  parameterparser.h  startFilter.cpp  util.cpp  util.h  vstable.cpp  vstable.h
src/VisIVOFilters/: CMakeLists.txt
src/VisIVOFilters/Filters/: Makefile  VisIVOFilter  mainFilter.cpp  startFilter.cpp  startFilter.h  vspointdistributeop.cpp  vspointdistributeop.h  vspointpropertyop.cpp  vsselectfieldop.cpp  vssplittableop.cpp  vsstatisticop.cpp  vstableop.cpp  vstableop.h
src/VisIVOImporter/: CMakeLists.txt
src/VisIVOImporter/Importers/: Makefile  VisIVOImporter  abstractsource.cpp  abstractsource.h  asciisource.cpp  fitsimagesource.h  flysource.cpp  gadgetsource.cpp  gadgetsource.h  hdf5source.cpp_1  hdf5source.h  rawgridsource.cpp  rawgridsource.h  rawpointssource.cpp  rawpointssource.h  vosourcenew.cpp  vtksource.cpp  vtksource.h
src/VisIVOUtils/: CMakeLists.txt  Makefile  VisIVOUtils
src/VisIVOViewer/: CMakeLists.txt
src/VisIVOViewer/Viewer/: Makefile  Makefile_ORI  Makefile_u1  VisIVOViewer  isosurfacepipe.cpp  mainViewer.cpp  pipe.cpp  pipe.h  pointspipe.cpp  pointssmoothpipe.cpp  slicepipe.h  slicerpipe.cpp  splotchpipe.cpp  vectorpipe.cpp  volumepipe.cpp  volumepipe.h  volumeslicer.cpp  volumeslicer.h  vtkimagepipe.cpp
src/VisIVOViewer/Viewer/Splotch/splotch/: splotch.cc
